name alignment fixed

--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -220,6 +220,9 @@
         .title {
           margin-top: 60px;
         }
+        .myName { 
+          text-align: center;
+        }
       }
     }
   }
